--- a/res/client/css/style.css
+++ b/res/client/css/style.css
@@ -476,7 +476,7 @@ body.debug .debug-ui-right {
   -moz-box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.3);
   position: relative;
-  width: 250px;
+  width: 100%;
   padding: 12px 15px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
